@@ -26,6 +26,8 @@ Revision history for STEVEB-Dist-Mgr
           roadmap for a binary script
         - We now croak() if the new version sent into bump_version() is less
           than or equal to the current version (closes #14)
+        - Add tests that compare a full run against a saved template
+          distribution (closes #17)
 
 0.04    2020-12-23
         - Last test CPAN release
